# fork-Resume-Builder

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  ats_scorer.py  config.example.json  docx_generator.py  hr_scorer.py  jd_fetcher.py  job_discovery.py  job_fit_scorer.py  llm_scorer.py  mcp_scorer.py  pii_redactor.py  pyproject.toml  requirements.txt  resume_builder.py  scorer_server.py  test_job_search.py
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: resume.md  setup.md  tailor-resume.md
cloud/: __init__.py  auth.py  billing.py  client.py
hooks/: hooks.json
